@@ -1,6 +1,9 @@
 1.0 29/12/06
 - Initial release
 SVN
-- added ability to scroll through playlist and play selected songs with the
-volume control/play button.
 - best used with g15daemon wip
+- disable XTest extension by default, run configure with --enable-xtest to
+  enable.  The default is now to use XSendEvent.
+- Improve reliability - the lockups occasionally seen in version 1.0 should
+  be resolved.
+- g15macro will now wait for g15daemon to start.
